# autotests-api

./: .gitignore  README.md  config.py  conftest.py  index.html  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
1/: index.html
1/export/: influxDbData.txt
10/: index.html
10/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: history-trend.json  history.json  retry-trend.json
10/widgets/: categories-trend.json  duration-trend.json  executors.json  severity.json  status-chart.json  suites.json  summary.json
11/: index.html
11/export/: influxDbData.txt
12/: index.html
12/export/: influxDbData.txt
13/: index.html
13/export/: influxDbData.txt
14/: index.html
14/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
14/export/: influxDbData.txt  prometheusData.txt
14/history/: categories-trend.json  history-trend.json  history.json
14/widgets/: duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  summary.json
15/: index.html
15/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
15/export/: influxDbData.txt  (+1 more)
2/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
clients/: base_client.py  base_schema.py  deps.py  errors_schema.py  event_hooks.py
utils/: fake_data_factory.py  handle_error_decorator.py  logger.py  mapper.py
(+524 files in other folders)
