[project]
name = "autotests-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Romanov Lev"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio (>=1.75.0,<2.0.0)",
    "grpcio-tools (>=1.75.0,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "faker (>=37.8.0,<38.0.0)",
    "pytest-rerunfailures (>=16.0.1,<17.0.0)",
    "allure-pytest (>=2.15.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
